# secret_backend

./: Cargo.toml  LICENSE  README.md
migrations/: 20241007115100_user.sql
src/: db.rs  dtos.rs  error.rs  main.rs  middleware.rs  models.rs  routes.rs  secret.rs
src/handler/: auth.rs  keys.rs  mod.rs  secrets.rs  secrets_version.rs  setting.rs  user.rs
src/utils/: connect_user_database.rs  create_table.rs  decrypt.rs  encrypt.rs  generate_key.rs  mod.rs  password.rs
